--- a/src/main/resources/api/mocker.yaml
+++ b/src/main/resources/api/mocker.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
-  title: Mocker Service API
-  description: API describing how to interact with the mocker service programatically.
+  title: Mocker API
+  description: API describing how to interact with the mocker programatically.
   version: 1.0.0
 servers:
   - url: http://localhost:8080/v1
