Add access log details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ server.port=8080
 
 # Clients
 clients.whitelisted=web,postman
+
+# Logs
+server.tomcat.basedir=
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.buffered=false
+server.tomcat.accesslog.pattern=common
+server.tomcat.accesslog.rename-on-rotate=true
