--- a/src/main/resources/api/mocker-v1.yaml
+++ b/src/main/resources/api/mocker-v1.yaml
@@ -53,7 +53,7 @@ components:
           items:
             type: object
             properties:
-              key:
+              name:
                 type: string
               value:
                 type: string
