--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 # Default start-up port
 server.port=8080
 
+# Database
+spring.datasource.url=jdbc:mysql://localhost:3306/mocker
+spring.datasource.username=mocker
+spring.datasource.password=FUcaupEj
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
 # Clients
 clients.whitelisted=web,postman
 
