--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/mocker
+spring.datasource.url=jdbc:mysql://localhost:3306/mocker?serverTimezone=UTC
 spring.datasource.username=mocker
 spring.datasource.password=FUcaupEj
 
