--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -22,4 +22,12 @@ jobs:
         distribution: 'temurin'
 
     - name: Build with Maven
-      run: mvn -B clean package -DskipTests --file pom.xml
+      run: |
+        mvn -B clean package -DskipTests --file pom.xml
+        mkdir artifacts && cp target/mocker*.jar artifacts
+    
+    - name: Persist Mocker artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: mocker
+        path: artifacts
